fix(ui): visual marquee & slider overflow on mobile devices

--- a/app/assets/css/base.css
+++ b/app/assets/css/base.css
@@ -21,7 +21,8 @@
   h5,
   h6 {
     font-weight: bold;
-    line-height: var(--leading-loose);
+    line-height: var(--leading-tight);
+    margin-block: calc(var(--spacing) * 2);
   }
 
   h1 {
@@ -38,6 +39,10 @@
 
   h4 {
     font-size: var(--text-lg);
+  }
+
+  p {
+    margin-block: calc(var(--spacing) * 2) calc(var(--spacing) * 4);
   }
 
   button {
